# ardua-shooter-game

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md
ArduaShooter/: main.cpp
camera/: camera.cpp  camera.hpp
config/: config.hpp  drawable.hpp
main/: main.cpp
manager/: manager.cpp  manager.hpp
menu/: menu.cpp  menu.hpp
objects2D/: circle2D.hpp  object2D.cpp  object2D.hpp  polygon2D.hpp
point2D/: point2D.cpp  point2D.hpp
src/camera/: camera.hpp
src/config/: config.hpp  drawable.hpp
src/main/: main.cpp
src/manager/: manager.cpp  manager.hpp
src/menu/: menu.cpp  menu.hpp
src/objects2D/: object2D.cpp  object2D.hpp
src/point2D/: point2D.cpp  point2D.hpp
src/weapon/: weapon.cpp  weapon.hpp
src/world/: world.hpp
weapon/: weapon.cpp  weapon.hpp
world/: world.cpp  world.hpp
